--- a/src/app/admin/verification/verification.component.html
+++ b/src/app/admin/verification/verification.component.html
@@ -13,7 +13,7 @@
         </li>
       </ul>
 
-      <p *ngIf="pendingKycs.length === 0" class="kyc-status approved"> All KYCs Verified!</p>
+      <p *ngIf="pendingKycs.length === 0" class="kyc-status approved"> No Pending Applications!</p>
 
      <div *ngIf="selectedKyc" class="kyc-details">
         <h2 class="heading">KYC Details</h2>
