--- a/src/app/admin/admin-schemes/admin-schemes.component.css
+++ b/src/app/admin/admin-schemes/admin-schemes.component.css
@@ -102,3 +102,139 @@
   background-color: #dc3545;
   color: white;
 }
+
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  overflow-y: auto;
+}
+
+.modal-container {
+  background: #fff;
+  padding: 24px 28px;
+  border-radius: 14px;
+  width: 400px;
+  max-width: 95%;
+  max-height: 90vh;
+  box-shadow: 0 6px 14px rgba(0, 0, 0, 0.2);
+  font-family: 'Segoe UI', sans-serif;
+  font-size: 14px;
+  position: relative;
+  overflow-y: auto;
+}
+
+.modal-container h2 {
+  margin-top: 0;
+  color: #7c00a1;
+  font-size: 18px;
+  margin-bottom: 16px;
+  text-align: center;
+}
+
+.modal-container label {
+  display: block;
+  margin-top: 10px;
+  margin-bottom: 6px;
+  font-weight: 600;
+  font-size: 13px;
+  color: #5d007b;
+}
+
+.modal-container input,
+.modal-container select {
+  width: 100%;
+  padding: 8px 10px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  font-size: 13px;
+  box-sizing: border-box;
+}
+
+.modal-actions {
+  margin-top: 20px;
+  display: flex;
+  justify-content: flex-end;
+  gap: 12px;
+  flex-wrap: wrap;
+}
+.modal-actions button {
+  padding: 8px 16px;
+  border: none;
+  border-radius: 8px;
+  font-size: 13px;
+  font-weight: 600;
+  cursor: pointer;
+}
+.actions {
+  display: flex;
+  gap: 54px; 
+}
+.modal-actions button:first-child {
+  background-color: #a205ea;
+  color: white;
+}
+.modal-actions button:last-child {
+  background-color: #e2e2e2;
+  color: black;
+}
+.modal-actions button:first-child:hover {
+  background-color: #8c04cc;
+}
+.modal-actions button:last-child:hover {
+  background-color: #ccc;
+}
+
+.senior-rate-mode .modal-container {
+  width: 500px;
+  max-height: 90vh;
+  overflow-y: auto;
+}
+
+.senior-rate-mode h2 {
+  text-align: center;
+  color: #7c00a1;
+  margin-top: 0;
+  margin-bottom: 16px;
+}
+
+.common-rate-section,
+.individual-rate-section {
+  margin-top: 16px;
+}
+
+.common-rate-section label,
+.individual-rate-section label {
+  color: #5d007b;
+  font-weight: 500;
+  margin-bottom: 6px;
+  display: block;
+}
+
+.individual-rate-section div {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.individual-rate-section label {
+  flex: 1;
+  font-size: 13px;
+}
+
+.individual-rate-section input {
+  flex: 0 0 80px;
+  margin-left: 12px;
+  padding: 6px 8px;
+}
+
+input[type='radio'] {
+  margin-right: 6px;
+}
