--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -16,8 +16,12 @@
           [(ngModel)]="email"
           name="email"
           placeholder="Enter Your Email"
+          (ngModelChange)="onEmailChange()"
           required
         />
+        <div class="error-text" *ngIf="invalidEmail">
+          Invalid email
+        </div>
       </div>
 
       <div class="form-group position-relative">
@@ -38,8 +42,12 @@
         <a (click)="openForgotPassword()">Forgot MPIN?</a>
       </div>
 
-      <button type="submit" class="btn">Login</button>
-      <button type="button" class="btn" (click)="OnRegisterClick()">REGISTER</button>
+      <button type="submit" class="btn" [disabled]="invalidEmail">Login</button>
+
+      <p class="register-link">
+        Don't have an account?
+        <a href="#" (click)="checkEmailExistsBeforeRegister($event)">Register</a>
+      </p>
     </form>
   </div>
 </div>
